Dibuat menggunakan Colaboratory

--- a/scraper_nusabali.ipynb
+++ b/scraper_nusabali.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPTpFMwTVJd7Zjog/EU0ivQ",
+      "mount_file_id": "https://github.com/Noertri/scraper-nusabali/blob/main/scraper_nusabali.ipynb",
+      "authorship_tag": "ABX9TyPuIo2b4avuBopCWwYHnUdZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +29,27 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "!pip install --upgrade -r requirements.txt"
+      ],
       "metadata": {
-        "id": "TLHpG-5o5W4E"
+        "id": "TLHpG-5o5W4E",
+        "outputId": "dc4fbecc-6939-42c4-f176-fe20ed8f7524",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[31mERROR: Could not open requirements file: [Errno 2] No such file or directory: 'requirements.txt'\u001b[0m\u001b[31m\n",
+            "\u001b[0m"
+          ]
+        }
+      ]
     }
   ]
 }
