--- a/scraper_nusabali.ipynb
+++ b/scraper_nusabali.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/Noertri/scraper-nusabali/blob/main/scraper_nusabali.ipynb",
-      "authorship_tag": "ABX9TyMlS+Rl0K9+FyEOL8+Io6tx",
+      "authorship_tag": "ABX9TyNzN1GMDTbRYYVYfUW/FEMc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,76 +33,16 @@
         "!pip install --upgrade -r requirements.txt"
       ],
       "metadata": {
-        "id": "TLHpG-5o5W4E",
-        "outputId": "18d3045b-b485-446d-8dcf-7a0022d0628a",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "TLHpG-5o5W4E"
       },
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Collecting beautifulsoup4>=4.12.2 (from -r requirements.txt (line 1))\n",
-            "  Downloading beautifulsoup4-4.12.2-py3-none-any.whl (142 kB)\n",
-            "\u001b[?25l     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/143.0 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m143.0/143.0 kB\u001b[0m \u001b[31m6.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hCollecting dateparser>=1.1.8 (from -r requirements.txt (line 2))\n",
-            "  Downloading dateparser-1.1.8-py2.py3-none-any.whl (293 kB)\n",
-            "\u001b[?25l     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/293.8 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m293.8/293.8 kB\u001b[0m \u001b[31m22.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hCollecting httpx>=0.24.1 (from -r requirements.txt (line 3))\n",
-            "  Downloading httpx-0.24.1-py3-none-any.whl (75 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m75.4/75.4 kB\u001b[0m \u001b[31m8.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hCollecting openpyxl>=3.1.2 (from -r requirements.txt (line 4))\n",
-            "  Downloading openpyxl-3.1.2-py2.py3-none-any.whl (249 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m250.0/250.0 kB\u001b[0m \u001b[31m18.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hCollecting requests>=2.28.1 (from -r requirements.txt (line 5))\n",
-            "  Downloading requests-2.31.0-py3-none-any.whl (62 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m62.6/62.6 kB\u001b[0m \u001b[31m5.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: soupsieve>1.2 in /usr/local/lib/python3.10/dist-packages (from beautifulsoup4>=4.12.2->-r requirements.txt (line 1)) (2.4.1)\n",
-            "Requirement already satisfied: python-dateutil in /usr/local/lib/python3.10/dist-packages (from dateparser>=1.1.8->-r requirements.txt (line 2)) (2.8.2)\n",
-            "Requirement already satisfied: pytz in /usr/local/lib/python3.10/dist-packages (from dateparser>=1.1.8->-r requirements.txt (line 2)) (2022.7.1)\n",
-            "Requirement already satisfied: regex!=2019.02.19,!=2021.8.27 in /usr/local/lib/python3.10/dist-packages (from dateparser>=1.1.8->-r requirements.txt (line 2)) (2022.10.31)\n",
-            "Requirement already satisfied: tzlocal in /usr/local/lib/python3.10/dist-packages (from dateparser>=1.1.8->-r requirements.txt (line 2)) (5.0.1)\n",
-            "Requirement already satisfied: certifi in /usr/local/lib/python3.10/dist-packages (from httpx>=0.24.1->-r requirements.txt (line 3)) (2023.5.7)\n",
-            "Collecting httpcore<0.18.0,>=0.15.0 (from httpx>=0.24.1->-r requirements.txt (line 3))\n",
-            "  Downloading httpcore-0.17.3-py3-none-any.whl (74 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m74.5/74.5 kB\u001b[0m \u001b[31m8.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: idna in /usr/local/lib/python3.10/dist-packages (from httpx>=0.24.1->-r requirements.txt (line 3)) (3.4)\n",
-            "Requirement already satisfied: sniffio in /usr/local/lib/python3.10/dist-packages (from httpx>=0.24.1->-r requirements.txt (line 3)) (1.3.0)\n",
-            "Requirement already satisfied: et-xmlfile in /usr/local/lib/python3.10/dist-packages (from openpyxl>=3.1.2->-r requirements.txt (line 4)) (1.1.0)\n",
-            "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.10/dist-packages (from requests>=2.28.1->-r requirements.txt (line 5)) (2.0.12)\n",
-            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.10/dist-packages (from requests>=2.28.1->-r requirements.txt (line 5)) (1.26.16)\n",
-            "Collecting h11<0.15,>=0.13 (from httpcore<0.18.0,>=0.15.0->httpx>=0.24.1->-r requirements.txt (line 3))\n",
-            "  Downloading h11-0.14.0-py3-none-any.whl (58 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m58.3/58.3 kB\u001b[0m \u001b[31m3.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: anyio<5.0,>=3.0 in /usr/local/lib/python3.10/dist-packages (from httpcore<0.18.0,>=0.15.0->httpx>=0.24.1->-r requirements.txt (line 3)) (3.7.1)\n",
-            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.10/dist-packages (from python-dateutil->dateparser>=1.1.8->-r requirements.txt (line 2)) (1.16.0)\n",
-            "Requirement already satisfied: exceptiongroup in /usr/local/lib/python3.10/dist-packages (from anyio<5.0,>=3.0->httpcore<0.18.0,>=0.15.0->httpx>=0.24.1->-r requirements.txt (line 3)) (1.1.2)\n",
-            "Installing collected packages: requests, openpyxl, h11, beautifulsoup4, httpcore, dateparser, httpx\n",
-            "  Attempting uninstall: requests\n",
-            "    Found existing installation: requests 2.27.1\n",
-            "    Uninstalling requests-2.27.1:\n",
-            "      Successfully uninstalled requests-2.27.1\n",
-            "  Attempting uninstall: openpyxl\n",
-            "    Found existing installation: openpyxl 3.0.10\n",
-            "    Uninstalling openpyxl-3.0.10:\n",
-            "      Successfully uninstalled openpyxl-3.0.10\n",
-            "  Attempting uninstall: beautifulsoup4\n",
-            "    Found existing installation: beautifulsoup4 4.11.2\n",
-            "    Uninstalling beautifulsoup4-4.11.2:\n",
-            "      Successfully uninstalled beautifulsoup4-4.11.2\n",
-            "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
-            "google-colab 1.0.0 requires requests==2.27.1, but you have requests 2.31.0 which is incompatible.\u001b[0m\u001b[31m\n",
-            "\u001b[0mSuccessfully installed beautifulsoup4-4.12.2 dateparser-1.1.8 h11-0.14.0 httpcore-0.17.3 httpx-0.24.1 openpyxl-3.1.2 requests-2.31.0\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "!pip list"
+      ],
       "metadata": {
         "id": "uXOYxvWaAlmT"
       },
