--- a/scraper_nusabali.ipynb
+++ b/scraper_nusabali.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/Noertri/scraper-nusabali/blob/main/scraper_nusabali.ipynb",
-      "authorship_tag": "ABX9TyNzN1GMDTbRYYVYfUW/FEMc",
+      "authorship_tag": "ABX9TyMOjMV17pPazxpeFf9mgCEC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -26,6 +26,15 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/Noertri/scraper-nusabali/blob/main/scraper_nusabali.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Menginstall package yang diperlukan"
+      ],
+      "metadata": {
+        "id": "QEjTpuFHBNdM"
+      }
     },
     {
       "cell_type": "code",
