scrape 20 artikel di daftar awal

--- a/scraper_nusabali.ipynb
+++ b/scraper_nusabali.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "mount_file_id": "https://github.com/Noertri/scraper-nusabali/blob/main/scraper_nusabali.ipynb",
-      "authorship_tag": "ABX9TyMOjMV17pPazxpeFf9mgCEC",
+      "authorship_tag": "ABX9TyNvgC7/Wos+FhaLvf9JfhdS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,30 +29,110 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Menginstall package yang diperlukan"
+        "# Menginstall package"
       ],
       "metadata": {
-        "id": "QEjTpuFHBNdM"
+        "id": "JgrOEsm5Dpb5"
       }
     },
     {
       "cell_type": "code",
       "source": [
+        "%cd \"/content/drive/MyDrive/Colab Notebooks/scraper-nusabali\"\n",
         "!pip install --upgrade -r requirements.txt"
       ],
       "metadata": {
-        "id": "TLHpG-5o5W4E"
+        "id": "HC5UJfezHGke"
       },
       "execution_count": null,
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "!pip list"
+        "# Program"
       ],
       "metadata": {
-        "id": "uXOYxvWaAlmT"
+        "id": "IZ_9Tvg3EYRq"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import httpx\n",
+        "from bs4 import BeautifulSoup\n",
+        "from dataclasses import dataclass, asdict\n",
+        "import openpyxl as pxl\n",
+        "from urllib import parse\n",
+        "import dateparser\n",
+        "from datetime import datetime\n",
+        "\n",
+        "\n",
+        "client = httpx.Client(follow_redirects=True, timeout=5.)\n",
+        "main_url = \"https://www.nusabali.com\"\n",
+        "\n",
+        "\n",
+        "@dataclass\n",
+        "class Result:\n",
+        "    tanggal: str = \"\"\n",
+        "    judul: str = \"\"\n",
+        "    url: str = \"\"\n",
+        "\n",
+        "\n",
+        "def request_main_page(keyword):\n",
+        "    page_url = parse.urljoin(main_url, \"search\")\n",
+        "\n",
+        "    params = {\n",
+        "        'keyword': f'{keyword}',\n",
+        "    }\n",
+        "\n",
+        "    query_str = parse.urlencode(params)\n",
+        "\n",
+        "    referer_url = parse.urlunsplit((\"https\", \"www.nusabali.com\", \"search\", query_str, \"\"))\n",
+        "\n",
+        "    headers = {\n",
+        "        'authority': 'www.nusabali.com',\n",
+        "        'accept': 'text/html,application/xhtml+xml,application/xml;q=0.9,image/avif,image/webp,image/apng,*/*;q=0.8,application/signed-exchange;v=b3;q=0.7',\n",
+        "        'accept-language': 'id-ID,id;q=0.9,en-US;q=0.8,en;q=0.7,ms;q=0.6,ja;q=0.5',\n",
+        "        'dnt': '1',\n",
+        "        'referer': f'{referer_url}',\n",
+        "        'sec-ch-ua': '\"Not/A)Brand\";v=\"99\", \"Google Chrome\";v=\"115\", \"Chromium\";v=\"115\"',\n",
+        "        'sec-ch-ua-mobile': '?0',\n",
+        "        'sec-ch-ua-platform': '\"Windows\"',\n",
+        "        'sec-fetch-dest': 'document',\n",
+        "        'sec-fetch-mode': 'navigate',\n",
+        "        'sec-fetch-site': 'same-origin',\n",
+        "        'sec-fetch-user': '?1',\n",
+        "        'upgrade-insecure-requests': '1',\n",
+        "        'user-agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/115.0.0.0 Safari/537.36',\n",
+        "    }\n",
+        "\n",
+        "\n",
+        "    response = client.get(page_url, params=params, headers=headers)\n",
+        "\n",
+        "    if response.status_code < 400:\n",
+        "        return response\n",
+        "\n",
+        "\n",
+        "# scrape halaman depan\n",
+        "r = request_main_page(keyword=\"bali\")\n",
+        "soup = BeautifulSoup(r.text, \"html.parser\")\n",
+        "article_list = soup.select(\"div#article-list>div.row\")\n",
+        "if article_list:\n",
+        "    for article in article_list:\n",
+        "        h5_tag = article.select_one(\"div.col-xs-8.col-md-8 h5\")\n",
+        "        span_tag = article.select_one(\"div.col-xs-12.entry-metas>span>span\")\n",
+        "        article_title = h5_tag.get_text(strip=True, separator=\" \") if h5_tag is not None else \"\"\n",
+        "        article_url = a_tag.get(\"href\", \"\") if (a_tag := h5_tag.select_one(\"a\")) is not None else \"\"\n",
+        "        article_date = span_tag.get_text(strip=True, separator=\" \") if span_tag is not None else \"\"\n",
+        "        article_date = datetime.strptime(article_date, \"%d %b %Y %H:%M\")\n",
+        "\n",
+        "        result = Result(tanggal=article_date.strftime(\"%d %B %Y %H:%M\"), judul=article_title, url=article_url)\n",
+        "        print(asdict(result))\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "N5b3E_DiEXYb"
       },
       "execution_count": null,
       "outputs": []
